Updated Project files to add new files

--- a/Project.cbp
+++ b/Project.cbp
@@ -41,7 +41,8 @@
 			</Target>
 		</Build>
 		<Unit filename="main.cpp" />
-		<Unit filename="main.h" />
+		<Unit filename="shiftRows.cpp" />
+		<Unit filename="shiftRows.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
