--- a/Project.cbp
+++ b/Project.cbp
@@ -43,6 +43,10 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="shiftRows.cpp" />
 		<Unit filename="shiftRows.h" />
+		<Unit filename="subBytes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="subBytes.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
