--- a/Project.cbp
+++ b/Project.cbp
@@ -40,6 +40,8 @@
 				</Linker>
 			</Target>
 		</Build>
+		<Unit filename="generateRoundKey.cpp" />
+		<Unit filename="generateRoundKey.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="shiftRows.cpp" />
 		<Unit filename="shiftRows.h" />
